--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "browserify": "^9.0.3",
     "gulp": "^3.8.11",
+    "gulp-compass": "^2.0.3",
     "gulp-less": "^3.0.1",
     "gulp-sass": "^1.3.3",
     "material-ui": "^0.7.1",
