--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-sass": "^1.3.3",
     "material-ui": "^0.7.1",
     "react": "^0.12.2",
+    "react-select": "^0.4.4",
     "react-tap-event-plugin": "^0.1.4",
     "reactify": "^1.1.0",
     "vinyl-source-stream": "^1.1.0"
